force-app/main/default/objects/TrailModule__c/TrailModule__c.object-meta.xml
<CustomObject>
    <label>TrailModule</label>
    <nameField>
        <label>TrailModule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TrailModules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>