force-app/main/default/objects/TrailModule__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <label>Module</label>
    <referenceTo>Module__c</referenceTo>
    <relationshipLabel>TrailModules</relationshipLabel>
    <relationshipName>TrailModules</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>