force-app/main/default/objects/TrailModule__c/fields/Trail__c.field-meta.xml
<CustomField>
    <fullName>Trail__c</fullName>
    <label>Trail</label>
    <referenceTo>Trail__c</referenceTo>
    <relationshipLabel>TrailModules</relationshipLabel>
    <relationshipName>TrailModules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>