force-app/main/default/objects/TrailModule__c/validationRules/NoLinkToInactiveModule.validationRule-meta.xml
<ValidationRule>
    <fullName>NoLinkToInactiveModule</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(Module__r.Active__c)</errorConditionFormula>
    <errorMessage>No se debe permitir vincular un Módulo inactivo a un Trail</errorMessage>
</ValidationRule>