force-app/main/default/objects/TrailModule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Time_Estimated__c</columns>
    <columns>Points__c</columns>
    <columns>Trail__c</columns>
    <columns>Module__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>